2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Exercise mln::interpolated and mln::tr_image together.

	* tests/core/image/imorph/interpolated-tr_image.cc: New.
	* tests/core/image/imorph/Makefile.am (check_PROGRAMS):
	Add interpolated-tr_image.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Make rotation axis optional.

	* mln/fun/x2x/rotation.hh
	(rotation<n, C>::rotation(const C&, const algebra::vec<n,C>&)):
	Provide a default version for the second argument.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Have mln::debug::iota work with images of floats.

	* mln/debug/iota.hh (mln::trait::modulus<T>): New trait.
	(mln::debug::impl::iota(trait::image::speed::any, I&, unsigned)):
	* mln/debug/iota.spe.hh
	(mln::debug::impl::iota(trait::image::speed::fastest, I&, unsigned)):
	Here.
	* tests/debug/iota.cc: Exercise mln::debug::iota with an image of
	floats.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Introduce point-wise function bindings.

	* mln/pw/bind.hh: New.
	* mln/pw/all.hh: Include mln/pw/bind.hh.
	* tests/pw/bind.cc: New.
	* tests/pw/Makefile.am (check_PROGRAMS): Add bind.
	* headers.mk,
	* tests/unit_test/unit-tests.mk:
	Regen.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Add support for unary minus on images.

	* mln/arith/minus.hh
	(mln::trait::set_unary_<op::uminus, Image, I>): New.
	(mln::operator-(const Image<I>&))
	(mln::arith::uminus(const Image<I>&))
	(mln::arith::impl::uminus_(trait::image::speed::any, const I&, O&))
	(mln::arith::impl::uminus_(trait::image::speed::fastest, const I&, O&)):
	New.
	* tests/arith/minus.cc: Exercise unary minus.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Exercise the unary plus operator on images.

	* tests/arith/plus.cc: Here.
	Remove dead code.

2013-10-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Fix and update the Doxygen documentation.

	* mln/arith/minus.hh,
	* mln/fun/vv2v/diff_abs.hh,